Initialized backend integration

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # VITE_PRODUCTION_API_URL=https://xcelerate-drf-backend.onrender.com/
 VITE_DEVELOPMENT_API_URL=http://127.0.0.1:8000/
-VITE_PRODUCTION_API_URL=https://zenithquizmaker-djangodrf-backend.onrender.com/
+VITE_PRODUCTION_API_URL=https://zenithquizmaker-djangodrf-backen-production.up.railway.app/
 VITE_IN_PRODUCTION=false
